testsuite/poke.pkl/printf-diag-22.pk
/* { dg-do compile } */

printf ("AB%f32oCD", 1U); /* { dg-error "" } */
